--- a/portfolio.css
+++ b/portfolio.css
@@ -186,13 +186,13 @@ display: none;
   box-shadow: 0 0 10px rgba(36, 67, 40, 0.8); 
   padding: 15px; 
   border-radius: 8px; 
-  width: 500px; 
+  width:95%; 
+  max-width: 500px;
 text-align: center;
 margin: auto;
 } 
 
 form { 
-  max-width: 400px; 
   margin: 0 auto; 
 } 
 
@@ -276,7 +276,7 @@ display: inline-block;
 font-family:Verdana, Geneva, Tahoma, sans-serif;
 font-size: clamp(10px,2vw,15px);
 width: auto;
-font-weight: 300;
+font-weight: 500;
 letter-spacing: 0px;
 color: black;
 background-color: whitesmoke;
@@ -319,7 +319,7 @@ font-size:clamp(25px,1.8vw,50px);
 font-weight: 600;
 }
 .icons-list img {
-width:8vw;
+width:11vw;
 max-width: 70px;
 }
 .icons-list img:hover {
