--- a/portfolio.css
+++ b/portfolio.css
@@ -108,12 +108,16 @@ column-gap: 20px;
 row-gap:20px;
 flex-wrap: wrap;
 margin:2rem 0px;
+align-items: stretch;
 }
 div[class*=projectcard]{
 flex-grow:1;
 flex-basis: 40% !important;
 text-align: center;
 margin: 2rem 0px;
+}
+.projectcard1 .thumbnail{
+  border: 1px solid black;
 }
 .thumbnail{
 position: relative;
@@ -142,7 +146,6 @@ transform: translateX(-50%) scale(1.1) ;
 }
 div[class*=projectcard] img{
 width: 100%;
-height: 300px;
 }
 a ,.projectbox a,.projectbox a:hover, a:hover{
 text-decoration: none;
